[package]
name = "trail-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rayon.workspace = true
notify.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
thiserror.workspace = true
trail-files = { path = "../trail-files", version = "0.1.0" }
trail-languages = { path = "../trail-languages", version = "0.1.0" }
trail-model = { path = "../trail-model", version = "0.1.0" }
trail-graph = { path = "../trail-graph", version = "0.1.0" }
trail-output = { path = "../trail-output", version = "0.1.0" }
trail-reflect = { path = "../trail-reflect", version = "0.1.0" }
trail-resolve = { path = "../trail-resolve", version = "0.1.0" }

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
