[package]
name = "trail-google-workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
trail-media = { path = "../trail-media", version = "0.1.0" }
url.workspace = true
wait-timeout.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
