[package]
name = "trail-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
strsim.workspace = true
thiserror.workspace = true
trail-languages = { path = "../trail-languages", version = "0.1.0" }
trail-model = { path = "../trail-model", version = "0.1.0" }
unicode-casefold.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
