[package]
name = "trail-graphdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rustls.workspace = true
rustls-platform-verifier.workspace = true
serde_json.workspace = true
thiserror.workspace = true
trail-model = { path = "../trail-model", version = "0.1.0" }
url.workspace = true

[lints]
workspace = true
