[package]
name = "trail-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
trail-files = { path = "../trail-files", version = "0.1.0" }
trail-transcribe = { path = "../trail-transcribe", version = "0.1.0", default-features = false }
ureq.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
