[package]
name = "trail-languages"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
trail-files = { path = "../trail-files" }
trail-model = { path = "../trail-model" }
tree-sitter.workspace = true
tree-sitter-language-pack.workspace = true
unicode-normalization.workspace = true
unicode-casefold.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
