[package]
name = "trail-languages"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
flate2.workspace = true
roxmltree.workspace = true
serde_yaml_ng.workspace = true
sha1.workspace = true
thiserror.workspace = true
toml.workspace = true
trail-files = { path = "../trail-files" }
trail-model = { path = "../trail-model" }
tree-sitter.workspace = true
tree-sitter-dm.workspace = true
tree-sitter-language-pack.workspace = true
unicode-normalization.workspace = true
unicode-casefold.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
