[package]
name = "trail-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
axum.workspace = true
rmcp.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
trail-core = { path = "../trail-core", version = "0.1.0" }
trail-graph = { path = "../trail-graph", version = "0.1.0" }
trail-model = { path = "../trail-model", version = "0.1.0" }
trail-prs = { path = "../trail-prs", version = "0.1.0" }
trail-query = { path = "../trail-query", version = "0.1.0" }

[dev-dependencies]
rmcp = { workspace = true, features = ["client"] }
tempfile.workspace = true

[lints]
workspace = true
