[package]
name = "trail-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
oxidize-pdf.workspace = true
roxmltree.workspace = true
thiserror.workspace = true
zip.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
